added hover animations for background objects

--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -43,10 +43,10 @@ section {
     transform: translate(-50%, -50%) rotate(-25deg);
     width: 814px;
     z-index: 1;
-    transition: transform 300ms ease-in-out;
+    animation: unRotateAndTint 125ms ease-in-out forwards;
   }
   &:hover .bg-shape {
-    transform: translate(-50%, -48%) rotate(-14deg);
+    animation: rotateAndTint 125ms ease-in-out forwards;
   }
 }
 
@@ -224,6 +224,44 @@ section {
     &:hover {
       color: #f8f5ec;
     }
+  }
+}
+
+@keyframes rotateAndTint {
+  0% {
+    transform: translate(-50%, -50%) rotate(-25deg);
+    filter: brightness(1) saturate(100%) hue-rotate(0deg);
+  }
+  30% {
+    transform: translate(-50%, -49%) rotate(-22deg);
+    filter: brightness(0.97) saturate(102%) hue-rotate(1deg);
+  }
+  60% {
+    transform: translate(-50%, -48.5%) rotate(-18deg);
+    filter: brightness(0.94) saturate(104%) hue-rotate(2deg);
+  }
+  100% {
+    transform: translate(-50%, -48%) rotate(-14deg);
+    filter: brightness(0.91) saturate(106%) hue-rotate(3deg);
+  }
+}
+
+@keyframes unRotateAndTint {
+  0% {
+    transform: translate(-50%, -48%) rotate(-14deg);
+    filter: brightness(0.91) saturate(106%) hue-rotate(3deg);
+  }
+  30% {
+    transform: translate(-50%, -48.5%) rotate(-18deg);
+    filter: brightness(0.94) saturate(104%) hue-rotate(2deg);
+  }
+  60% {
+    transform: translate(-50%, -49%) rotate(-22deg);
+    filter: brightness(0.97) saturate(102%) hue-rotate(1deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(-25deg);
+    filter: brightness(1) saturate(100%) hue-rotate(0deg);
   }
 }
 
