--- a/src/app/main-content/projects/projects.component.html
+++ b/src/app/main-content/projects/projects.component.html
@@ -101,14 +101,24 @@
               </p>
             </div>
             <div class="btn-container">
-              <button class="liblue-bg" *ngIf="project.live">Live Test</button>
-              <button *ngIf="project.live">GitHub</button>
+              <button class="liblue-bg" *ngIf="project.live">
+                <a class="dark-blue" href="{{ project.path }}">Live Test</a>
+              </button>
+              <button *ngIf="project.live">
+                <a href="{{ project.github }}">GitHub</a>
+              </button>
             </div>
           </div>
         </div>
         <div class="btn-container-mobile">
-          <button class="liblue-bg" *ngIf="project.live">Live Test</button>
-          <button *ngIf="project.live">GitHub</button>
+          <button class="liblue-bg" *ngIf="project.live">
+            <a class="dark-blue" [href]="project.path" target="_blank"
+              >Live Test</a
+            >
+          </button>
+          <button *ngIf="project.live && project.github">
+            <a [href]="project.github" target="_blank">GitHub</a>
+          </button>
         </div>
       </div>
     </div>
