--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -9,9 +9,12 @@ section {
   color: #89bcd9;
 }
 
+.dark-blue {
+  color: #262e34 !important;
+}
+
 .liblue-bg {
   background-color: #89bcd9 !important;
-  color: #262e34 !important;
   border: none !important;
   &:hover {
     background-color: #f8f5ec !important;
@@ -170,14 +173,17 @@ p {
       margin-top: 32px;
       > button {
         font-family: "Josefin Sans";
-        font-size: 17px;
         width: 120px;
         height: 48px;
         border-radius: 30px;
         background-color: transparent;
-        color: #89bcd9;
         border: #89bcd9 solid 1px;
         transition: background-color 125ms ease-in-out;
+        a {
+          text-decoration: none;
+          font-size: 17px;
+          color: #89bcd9;
+        }
         &:hover {
           background-color: #3d4a52;
           cursor: pointer;
@@ -194,14 +200,17 @@ p {
   gap: 20px;
   > button {
     font-family: "Josefin Sans";
-    font-size: 17px;
     width: 120px;
     height: 48px;
     border-radius: 30px;
     background-color: transparent;
-    color: #89bcd9;
     border: #89bcd9 solid 1px;
     transition: background-color 125ms ease-in-out;
+    a {
+      text-decoration: none;
+      font-size: 17px;
+      color: #89bcd9;
+    }
     &:hover {
       background-color: #3d4a52;
       cursor: pointer;
