disabled autofill designs

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -53,6 +53,8 @@
             required
             #fullNameRef="ngModel"
             minlength="2"
+            spellcheck="false"
+            autocomplete="name"
           />
         </div>
 
