--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -268,6 +268,7 @@ section {
 @media (max-width: 1380px) {
   section {
     margin-bottom: 100px;
+    height: 70dvh;
   }
   .left-side {
     max-width: 400px;
@@ -295,6 +296,7 @@ section {
     margin-top: 120px;
     margin-bottom: 40px;
     gap: 60px;
+    height: auto;
   }
   .corner-icons a {
     display: none;
