--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -3,7 +3,6 @@
 }
 
 section {
-  position: relative;
   padding-top: 80px;
   display: flex;
   flex-direction: column;
@@ -54,7 +53,7 @@ section {
   flex-direction: column;
   gap: 24px;
   margin-top: 2rem;
-  width: 960px;
+  width: 100%;
   .mail-name-container {
     display: flex;
     gap: 24px;
