added scroll animation to all sections

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,6 +1,14 @@
 <app-landing-page></app-landing-page>
-<app-why-me id="why-me"></app-why-me>
-<app-skills id="skills"></app-skills>
-<app-projects id="projects"></app-projects>
-<app-contact id="contact"></app-contact>
+<div #fadeSection class="fade-section">
+  <app-why-me id="why-me"></app-why-me>
+</div>
+<div #fadeSection class="fade-section">
+  <app-skills id="skills"></app-skills>
+</div>
+<div #fadeSection class="fade-section">
+  <app-projects id="projects"></app-projects>
+</div>
+<div #fadeSection class="fade-section">
+  <app-contact id="contact"></app-contact>
+</div>
 <app-footer></app-footer>
