added routing and fixed scrolling behaviour of header

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <section>
   <div class="content-wrapper">
-    <a href="">
+    <a routerLink="/">
       <img src="./assets/img/icons/arrow-mobile.svg" alt="" />
     </a>
     <h2>{{ "imprint.title" | translate }}</h2>
