--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,9 +1,8 @@
 <footer>
   <div class="content-wrapper">
     <div class="footer-left">
-      <a href="/imprint">{{ "footer.legal" | translate }}</a>
+      <a routerLink="/imprint">{{ "footer.legal" | translate }}</a>
       <div class="copyright">
-        <img src="" alt="" />
         <span>© Matthias Hofer 2025</span>
       </div>
     </div>
