--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -3,6 +3,7 @@ section {
   flex-direction: column;
   align-items: center;
   padding: 0 60px;
+  margin-bottom: 80px;
   .content-wrapper {
     max-width: 1440px;
     width: 100%;
@@ -136,5 +137,11 @@ section {
       height: auto;
       cursor: pointer;
     }
+  }
+}
+
+@media (min-height: 1266px) and (max-width: 1024px) {
+  section {
+    margin-bottom: 18.5dvh;
   }
 }
