--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -69,7 +69,7 @@
     </div>
     <h1 class="anta">Matthias Hofer</h1>
     <h3 class="anta">FRONTEND DEVELOPER</h3>
-    <a (click)="scrollToSection('why-me')">
+    <a (click)="goToSection('why-me')">
       <img class="down-arrow" src="./assets/img/icons/arrow-down.svg" alt="" />
     </a>
   </div>
@@ -85,12 +85,10 @@
 <nav class="mobile-nav" *ngIf="menuOpen">
   <img src="./assets/img/background-objs/bg-shape.png" alt="" />
   <div class="nav-content">
-    <a (click)="scrollToSection('why-me')">{{ "nav.why" | translate }}</a>
-    <a (click)="scrollToSection('skills')">{{ "nav.skills" | translate }}</a>
-    <a (click)="scrollToSection('projects')">{{
-      "nav.projects" | translate
-    }}</a>
-    <a (click)="scrollToSection('contact')">{{ "nav.contact" | translate }}</a>
+    <a (click)="goToSection('why-me')">{{ "nav.why" | translate }}</a>
+    <a (click)="goToSection('skills')">{{ "nav.skills" | translate }}</a>
+    <a (click)="goToSection('projects')">{{ "nav.projects" | translate }}</a>
+    <a (click)="goToSection('contact')">{{ "nav.contact" | translate }}</a>
     <div class="de-en-switch">
       <span (click)="setLanguage('de')" [class.active]="activeLang === 'de'"
         >DE</span
