added id to the landingpage in main-content

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,4 +1,4 @@
-<app-landing-page></app-landing-page>
+<app-landing-page id="landing"></app-landing-page>
 <div #fadeSection class="fade-section">
   <app-why-me id="why-me"></app-why-me>
 </div>
