--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -145,7 +145,9 @@
 
           <span class="privacy-text">
             {{ "contact.privacyNotice1" | translate }}
-            <a href="/imprint">{{ "contact.privacyNotice2" | translate }}</a>
+            <a routerLink="/privacy-policy">{{
+              "contact.privacyNotice2" | translate
+            }}</a>
             {{ "contact.privacyNotice3" | translate }}<br />
             <br />
             <span
@@ -174,14 +176,14 @@
         alt=""
       />
     </div>
-    <div *ngIf="showToast" class="toast-overlay">
-      <div class="toast">
-        {{ "contact.success" | translate }} <br />
-        <br />{{ "contact.thankyou" | translate }}
-      </div>
-    </div>
     <a (click)="scrollToTop($event)">
       <img class="top-arrow" src="./assets/img/icons/arrow-down.svg" alt="" />
     </a>
   </div>
 </section>
+<div *ngIf="showToast" class="toast-overlay">
+  <div class="toast">
+    {{ "contact.success" | translate }} <br />
+    <br />{{ "contact.thankyou" | translate }}
+  </div>
+</div>
