added new scrolling behaviour to why me and skills section

--- a/src/app/main-content/skills/skills.component.html
+++ b/src/app/main-content/skills/skills.component.html
@@ -30,7 +30,7 @@
       <span [innerHTML]="'skills.followup' | translate"></span>
     </div>
     <div class="btn-wrapper">
-      <a class="btn-container" (click)="scrollToSection('contact')">
+      <a class="btn-container" (click)="goToSection('contact')">
         <button>{{ "skills.talk" | translate }}</button>
       </a>
     </div>
