--- a/src/app/main-content/why-me/why-me.component.html
+++ b/src/app/main-content/why-me/why-me.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="right-side">
       <span>{{ "why.reason" | translate }}</span>
-      <a class="btn-container" (click)="scrollToSection('contact')">
+      <a class="btn-container" (click)="goToSection('contact')">
         <button>{{ "why.talk" | translate }}</button>
       </a>
     </div>
