--- a/src/app/main-content/why-me/why-me.component.scss
+++ b/src/app/main-content/why-me/why-me.component.scss
@@ -97,9 +97,7 @@ h2 {
         font-size: 18px;
       }
       .btn-container {
-        > button {
-          display: none;
-        }
+        justify-content: center;
       }
     }
   }
@@ -109,6 +107,9 @@ h2 {
   .text-container {
     .right-side {
       width: 58%;
+      .btn-container {
+        display: none;
+      }
     }
   }
 }
