--- a/src/app/main-content/projects/projects.component.html
+++ b/src/app/main-content/projects/projects.component.html
@@ -101,26 +101,24 @@
               </p>
             </div>
             <div class="btn-container">
-              <button class="liblue-bg" *ngIf="project.live">
-                <a class="dark-blue" href="{{ project.path }}" target="_blank"
-                  >Live Test</a
-                >
-              </button>
-              <button *ngIf="project.live">
-                <a href="{{ project.github }}" target="_blank">GitHub</a>
-              </button>
+              <a class="liblue-bg" href="{{ project.path }}" target="_blank">
+                <button class="dark-blue" *ngIf="project.live">
+                  Live Test
+                </button>
+              </a>
+              <a href="{{ project.github }}" target="_blank">
+                <button *ngIf="project.live">GitHub</button>
+              </a>
             </div>
           </div>
         </div>
         <div class="btn-container-mobile">
-          <button class="liblue-bg" *ngIf="project.live">
-            <a class="dark-blue" [href]="project.path" target="_blank"
-              >Live Test</a
-            >
-          </button>
-          <button *ngIf="project.live && project.github">
-            <a [href]="project.github" target="_blank">GitHub</a>
-          </button>
+          <a class="liblue-bg" href="{{ project.path }}" target="_blank">
+            <button class="dark-blue" *ngIf="project.live">Live Test</button>
+          </a>
+          <a href="{{ project.github }}" target="_blank">
+            <button *ngIf="project.live">GitHub</button>
+          </a>
         </div>
       </div>
     </div>
