fixed height and footer

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -28,6 +28,7 @@
     <br /><br />
     <span [innerHTML]="'imprint.copyright2' | translate"></span>
   </div>
+  <app-footer class="sticky-footer"></app-footer>
 </section>
 <div class="burger-menu" (click)="toggleMenu()">
   <img [src]="currentIcon" alt="Menu icon" />
@@ -47,4 +48,3 @@
     >
   </div>
 </nav>
-<app-footer></app-footer>
