--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -61,6 +61,7 @@
       <span>{{ "privacy.lastUpdated" | translate }}</span>
     </div>
   </div>
+  <app-footer class="sticky-footer"></app-footer>
 </section>
 <div class="burger-menu" (click)="toggleMenu()">
   <img [src]="currentIcon" alt="Menu icon" />
@@ -80,4 +81,3 @@
     >
   </div>
 </nav>
-<app-footer></app-footer>
