--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -328,7 +328,7 @@ p {
       border-bottom-left-radius: 24px;
     }
     .tab-bar {
-      justify-content: space-between;
+      // justify-content: space-between;
       gap: 0;
       > button {
         padding: 12px 14px;
