--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -26,78 +26,84 @@
   </div>
 </div>
 <section>
-  <div class="left-side">
-    <img
-      class="bg-shape"
-      src="./assets/img/background-objs/bg-shape.svg"
-      alt=""
-    />
-    <img class="portrait" src="./assets/img/portrait.png" alt="" />
-    <img
-      class="mobile-portrait"
-      src="./assets/img/portrait-mobile.png"
-      alt=""
-    />
-  </div>
-  <div class="right-side">
-    <div class="corner-icons">
-      <a class="icon-wrapper" href="mailto:contact@matthias-hofer.com">
+  <div class="content-wrapper">
+    <div class="left-side">
+      <img
+        class="bg-shape"
+        src="./assets/img/background-objs/bg-shape.svg"
+        alt=""
+      />
+      <img class="portrait" src="./assets/img/portrait.png" alt="" />
+      <img
+        class="mobile-portrait"
+        src="./assets/img/portrait-mobile.png"
+        alt=""
+      />
+    </div>
+    <div class="right-side">
+      <div class="corner-icons">
+        <a class="icon-wrapper" href="mailto:contact@matthias-hofer.com">
+          <img
+            src="./assets/img/icons/mail-icon.svg"
+            alt="Mail"
+            class="default"
+          />
+          <img
+            src="./assets/img/icons/mail-icon-hover.svg"
+            alt="Mail"
+            class="hover"
+          />
+        </a>
+        <a
+          class="icon-wrapper"
+          href="https://github.com/matthofer"
+          target="_blank"
+          rel="noopener"
+        >
+          <img
+            src="./assets/img/icons/github-icon.svg"
+            alt="GitHub"
+            class="default"
+          />
+          <img
+            src="./assets/img/icons/github-icon-hover.svg"
+            alt="GitHub"
+            class="hover"
+          />
+        </a>
+        <a
+          class="icon-wrapper"
+          href="https://www.linkedin.com/"
+          target="_blank"
+          rel="noopener"
+        >
+          <img
+            src="./assets/img/icons/linkedin-icon.svg"
+            alt="LinkedIn"
+            class="default"
+          />
+          <img
+            src="./assets/img/icons/linkedin-icon-hover.svg"
+            alt="LinkedIn"
+            class="hover"
+          />
+        </a>
+      </div>
+      <div class="logo-container">
+        <img src="./assets/img/icons/logo-icon.svg" alt="" />
+        <span class="anta">M.Hofer</span>
+        <span class="blue">developer</span>
+      </div>
+      <h1 class="anta">Matthias Hofer</h1>
+      <h3 class="anta">FRONTEND DEVELOPER</h3>
+      <a (click)="goToSection('why-me')">
         <img
-          src="./assets/img/icons/mail-icon.svg"
-          alt="Mail"
-          class="default"
-        />
-        <img
-          src="./assets/img/icons/mail-icon-hover.svg"
-          alt="Mail"
-          class="hover"
-        />
-      </a>
-      <a
-        class="icon-wrapper"
-        href="https://github.com/matthofer"
-        target="_blank"
-        rel="noopener"
-      >
-        <img
-          src="./assets/img/icons/github-icon.svg"
-          alt="GitHub"
-          class="default"
-        />
-        <img
-          src="./assets/img/icons/github-icon-hover.svg"
-          alt="GitHub"
-          class="hover"
-        />
-      </a>
-      <a
-        class="icon-wrapper"
-        href="https://www.linkedin.com/"
-        target="_blank"
-        rel="noopener"
-      >
-        <img
-          src="./assets/img/icons/linkedin-icon.svg"
-          alt="LinkedIn"
-          class="default"
-        />
-        <img
-          src="./assets/img/icons/linkedin-icon-hover.svg"
-          alt="LinkedIn"
-          class="hover"
+          class="down-arrow"
+          src="./assets/img/icons/arrow-down.svg"
+          alt=""
         />
       </a>
     </div>
-    <div class="logo-container">
-      <img src="./assets/img/icons/logo-icon.svg" alt="" />
-      <span class="anta">M.Hofer</span>
-      <span class="blue">developer</span>
-    </div>
-    <h1 class="anta">Matthias Hofer</h1>
-    <h3 class="anta">FRONTEND DEVELOPER</h3>
-    <a (click)="goToSection('why-me')">
-      <img class="down-arrow" src="./assets/img/icons/arrow-down.svg" alt="" />
-    </a>
   </div>
 </section>
 <app-header class="sticky-header"></app-header>
