--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -3,10 +3,18 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  height: calc(100vh - 109px);
+}
+
+.content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 100px;
+  width: 100%;
+  height: 100%;
   margin-top: 80px;
-  margin-left: 32px;
-  margin-right: 32px;
 }
 
 .anta {
@@ -20,14 +28,14 @@ section {
 .left-side {
   max-width: 596px;
   width: 100%;
-  aspect-ratio: 1 / 1.25;
+  aspect-ratio: 1 / 1.1;
   position: relative;
   .mobile-portrait {
     display: none;
   }
   .portrait {
     position: absolute;
-    top: 55%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 500px;
@@ -38,7 +46,7 @@ section {
 
   .bg-shape {
     position: absolute;
-    top: 55%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(-25deg);
     width: 814px;
@@ -119,6 +127,7 @@ section {
 }
 
 .sticky-header {
+  width: 100%;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -160,7 +169,7 @@ section {
   height: 0;
   > img {
     position: absolute;
-    top: 22vh;
+    top: 18vh;
     left: 50%;
     transform: translate(-50%, -50%);
     width: clamp(290px, 65vw, 520px);
@@ -170,7 +179,7 @@ section {
   }
   .nav-content {
     position: absolute;
-    top: 22vh;
+    top: 18vh;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
@@ -277,9 +286,8 @@ section {
 }
 
 @media (max-width: 1380px) {
-  section {
+  .content-wrapper {
     margin-bottom: 100px;
-    height: 70dvh;
   }
   .left-side {
     max-width: 400px;
@@ -301,13 +309,85 @@ section {
   }
 }
 
+@media (max-height: 1180px) and (min-height: 1024px) {
+  .mobile-nav {
+    img {
+      top: 120px;
+      width: 450px;
+      margin-top: 140px;
+    }
+    a {
+      font-size: 38px;
+    }
+    .nav-content {
+      top: 120px;
+      margin-top: 140px;
+    }
+  }
+}
+
+@media (max-height: 1368px) and (min-height: 1024px) {
+  .mobile-nav {
+    img {
+      top: 90px;
+      width: 480px;
+      margin-top: 160px;
+    }
+    .nav-content {
+      top: 90px;
+      margin-top: 160px;
+    }
+  }
+}
+
+@media (max-height: 600px) and (max-width: 1024px) {
+  .content-wrapper {
+    margin-top: 0;
+  }
+  .mobile-nav {
+    img {
+      width: 470px;
+      top: 34vh;
+      margin-top: 40px;
+    }
+    .nav-content {
+      top: 34vh;
+      margin-top: 40px;
+    }
+    a {
+      font-size: 38px;
+    }
+  }
+
+  .mobile-header {
+    height: 100px;
+    .burger-menu {
+      top: 28px;
+    }
+
+    .mobile-logo-container {
+      top: 12px;
+    }
+  }
+}
+
+@media (min-height: 1066px) and (min-width: 1380px) {
+  .content-wrapper {
+    position: absolute;
+    bottom: 109px;
+    height: auto;
+  }
+}
+
 @media (max-width: 1080px) {
   section {
+    height: auto;
+  }
+  .content-wrapper {
     flex-direction: column;
     margin-top: 0;
     margin-bottom: 40px;
     gap: 60px;
-    height: auto;
   }
   .corner-icons a {
     display: none;
@@ -345,63 +425,60 @@ section {
 }
 
 @media (max-width: 600px) {
-  section {
+  .content-wrapper {
     gap: 0px;
   }
   .mobile-nav {
     img {
-      top: 25vh;
+      top: 100px;
+      width: 320px;
     }
     .nav-content {
-      top: 25vh;
+      top: 100px;
+      gap: 20px;
     }
   }
 }
 
 @media (max-width: 470px) {
   .mobile-nav {
-    .nav-content {
-      gap: 20px;
-      top: 21vh;
-    }
-    img {
-      top: 21vh;
-    }
     a {
       font-size: 26px;
     }
   }
 }
 
-@media (max-width: 420px) {
-  .mobile-nav {
-    img {
-      top: 19vh;
-    }
-    .nav-content {
-      top: 19vh;
-    }
-  }
-}
+// @media (max-width: 420px) {
+//   .mobile-nav {
+//     img {
+//       top: 19vh;
+//     }
+//     .nav-content {
+//       top: 19vh;
+//     }
+//   }
+// }
 
-@media (max-width: 400px) {
-  .mobile-nav {
-    img {
-      top: 17vh;
-    }
-    .nav-content {
-      top: 17vh;
-    }
-  }
-}
+// @media (max-width: 400px) {
+//   .mobile-nav {
+//     img {
+//       top: 17vh;
+//     }
+//     .nav-content {
+//       top: 17vh;
+//     }
+//   }
+// }
 
 @media (max-width: 370px) {
   .mobile-nav {
     img {
-      top: 14vh;
+      top: 13vh;
+      margin-top: 80px;
     }
     .nav-content {
-      top: 14vh;
+      top: 13vh;
+      margin-top: 80px;
     }
   }
 
@@ -436,7 +513,7 @@ section {
   }
 }
 
-@media (max-width: 344px) and (max-height: 882px) {
+@media (max-width: 414px) and (max-height: 915px) {
   .mobile-nav {
     img {
       top: 13.7vh;
@@ -475,8 +552,21 @@ section {
   }
 }
 
-@media (min-width: 540px) and (max-height: 720px) {
-  section {
+@media (max-width: 430px) and (max-height: 932px) and (min-height: 931px) {
+  .mobile-nav {
+    img {
+      top: 18vh;
+      margin-top: 80px;
+    }
+    .nav-content {
+      top: 18vh;
+      margin-top: 80px;
+    }
+  }
+}
+
+@media (min-width: 540px) and (max-width: 541px) and (max-height: 720px) {
+  .content-wrapper {
     margin-top: 70px;
   }
   .mobile-nav {
@@ -485,54 +575,6 @@ section {
     }
     .nav-content {
       top: 33vh;
-    }
-  }
-}
-
-@media (max-height: 1368px) and (min-height: 1024px) {
-  .mobile-nav {
-    img {
-      top: 170px;
-      width: 490px;
-      margin-top: 120px;
-    }
-    a {
-      font-size: 38px;
-    }
-    .nav-content {
-      top: 170px;
-      margin-top: 120px;
-    }
-  }
-}
-
-@media (max-height: 600px) and (max-width: 1024px) {
-  section {
-    margin-top: 0;
-  }
-  .mobile-nav {
-    img {
-      width: 500px;
-      top: 41vh;
-      margin-top: 20px;
-    }
-    .nav-content {
-      top: 41vh;
-      margin-top: 20px;
-    }
-    a {
-      font-size: 38px;
-    }
-  }
-
-  .mobile-header {
-    height: 100px;
-    .burger-menu {
-      top: 28px;
-    }
-
-    .mobile-logo-container {
-      top: 12px;
     }
   }
 }
