fixed imprint and privacy policy footer

--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -147,10 +147,10 @@ section {
   }
 }
 
-@media (max-height: 1140px) {
+@media (max-height: 1160px) {
   .sticky-footer {
     position: relative;
     margin-top: 80px;
-    width: 99.59vw;
+    width: 108%;
   }
 }
