added linkedin page link

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -43,7 +43,7 @@
       </a>
       <a
         class="icon-wrapper"
-        href="https://www.linkedin.com/"
+        href="https://www.linkedin.com/in/matthias-hofer-93745136a/"
         target="_blank"
         rel="noopener"
       >
