--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -73,7 +73,7 @@
         </a>
         <a
           class="icon-wrapper"
-          href="https://www.linkedin.com/"
+          href="https://www.linkedin.com/in/matthias-hofer-93745136a/"
           target="_blank"
           rel="noopener"
         >
