added new portrait image

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -33,7 +33,7 @@
         src="./assets/img/background-objs/bg-shape.svg"
         alt=""
       />
-      <img class="portrait" src="./assets/img/portrait.png" alt="" />
+      <img class="portrait" src="./assets/img/portrait-new.png" alt="" />
       <img
         class="mobile-portrait"
         src="./assets/img/portrait-mobile.png"
